fix form on mobile

--- a/src/assets/components/_form.scss
+++ b/src/assets/components/_form.scss
@@ -9,6 +9,19 @@ input[type="text"], input[type="email"], textarea {
     width: column-spans(5);
 }
 
+#email-form {
+    @include sm {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+
+        input {
+            width: 100%;
+            @include space-stack($space-l);
+        }
+    }
+}
+
 form .input{
 
     display: grid;
@@ -16,6 +29,16 @@ form .input{
     grid-template-columns: repeat(2, column-spans(6));
     grid-template-rows: 1fr 1fr 1fr;
     align-items: end;
+
+    @include sm {
+        display: flex;
+        flex-direction: column;
+        input, textarea, .form-field {
+            width: 100%;
+        }
+
+
+    }
 
     input, textarea {
         margin: $space-m 0 $space-xl;
